# USBackup

./: .gitignore  Cargo.toml  EXCLUSIONS_DOC.md  LICENSE  README.md  README_FR.md  usbackup.service
.github/workflows/: release.yml  rust.yml
src/: exclude_list.txt  handler.rs  main.rs  notifications.rs  storage.rs  tui.rs
src/handler/: backup.rs  github.rs  mod.rs  udev_utils.rs  wizard.rs
src/models/: config.rs  device.rs
