[package]
name = "USBackup"
version = "0.1.0"
edition = "2021"

[dependencies]
nusb = "0.2.3"
futures-lite = "2.6.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
notify-rust = "4.11"
sysinfo = "0.38.4"
udev = "0.9.3"
env_logger = "0.11.10"
log = "0.4.29"
tokio = { version = "1.52.1", features = ["full"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
indicatif = "0.18.4"
toml = "1.1.2"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
rand = "0.10.1"
directories = "6.0.0"
